HomeProject/force-app/main/default/objects/SiteLocation__c/fields/POP__c.field-meta.xml
<CustomField>
    <fullName>POP__c</fullName>
    <label>POP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>