HomeProject/force-app/main/default/objects/SiteLocation__c/fields/Postal__c.field-meta.xml
<CustomField>
    <fullName>Postal__c</fullName>
    <label>Postal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>