HomeProject/force-app/main/default/objects/SiteLocation__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <length>64</length>
    <type>Text</type>
</CustomField>