HomeProject/force-app/main/default/objects/SiteLocation__c/fields/SiteCode__c.field-meta.xml
<CustomField>
    <fullName>SiteCode__c</fullName>
    <externalId>true</externalId>
    <label>Site Code</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>